fix all picture file paths so the media appears correctly

--- a/marketing/templates/marketing/about.html
+++ b/marketing/templates/marketing/about.html
@@ -22,7 +22,7 @@
             </div>
 
             <div class="col-lg-5">
-                <img src="/media/about/about-pp.jpg" class="img-fluid about-img-styled" alt="black and white photo of architectural pillars">
+                <img src="{% static 'marketing/images/about-pp.jpg' %}" class="img-fluid about-img-styled" alt="black and white photo of architectural pillars">
             </div>
         </div>
 
