--- a/templates/base.html
+++ b/templates/base.html
@@ -12,18 +12,11 @@
 </head>
 <nav class="navbar navbar-expand-lg sticky-top border-bottom bg-white">
     <div class="container">
-        {# Logo logic #}
-        {% if request.tenant.schema_name == 'public' %}
-            <a class="navbar-brand d-flex align-items-center" href="{% url 'public_marketing:landing' %}">
-                <img src="/media/logos/pp-logo.png" alt="Pillar & Post Logo">
-                <span class="ms-2">PILLAR & POST</span>
-            </a>
-        {% else %}
-            <a class="navbar-brand d-flex align-items-center" href="/">
-                <img src="/media/logos/pp-logo.png" alt="Pillar & Post Logo">
-                <span class="ms-2">PILLAR & POST</span>
-            </a>
-            {% endif %}
+        {# Simplified Logo: Always shows P&P logo from static files #}
+        <a class="navbar-brand d-flex align-items-center" href="/">
+            <img src="{% static 'marketing/images/pp-logo.png' %}" alt="Pillar & Post Logo">
+            <span class="ms-2">PILLAR & POST</span>
+        </a>
             
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
