--- a/marketing/templates/marketing/landing.html
+++ b/marketing/templates/marketing/landing.html
@@ -8,14 +8,14 @@
     <div class="container">
         <div class="row align-items-center">
             <div class="col-lg-5 mb-4 mb-lg-0">
-                <img src="/media/hero/hero-image.jpg" class="img-fluid hero-img-sm" alt="Architectural pillars">
+                <img src="{% static 'marketing/images/hero-image.jpg' %}" class="img-fluid hero-img-sm" alt="Architectural pillars">
             </div>
             
             <div class="col-lg-6 offset-lg-1 text-lg-start text-center">
                 <h1 class="display-4 fw-bold mb-3">Professional Recruitment Websites</h1>
                 <p class="lead mb-4">Built for credibility. Ready for growth.</p>
                 <div class="d-flex justify-content-lg-start justify-content-center gap-3">
-                    <a href="{% url 'public_marketing:template_select' %}\" class="btn btn-primary px-5">Get Started</a>
+                    <a href="{% url 'public_marketing:template_select' %}" class="btn btn-primary px-5">Get Started</a>
                 </div>
             </div>
         </div>
