--- a/cms/templates/cms/base_cms.html
+++ b/cms/templates/cms/base_cms.html
@@ -9,7 +9,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     
     <link rel="stylesheet" href="{% static 'marketing/css/style.css' %}">
-    <link rel="stylesheet" href="{% static 'cms/css/dashboard.css' %}">
+    <link rel="stylesheet" href="{% static 'cms/css/cms-dashboard.css' %}">
     
     {% block extra_css %}{% endblock %}
 </head>
