--- a/cms/templates/cms/base_cms.html
+++ b/cms/templates/cms/base_cms.html
@@ -8,7 +8,7 @@
     
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     
-    <link rel="stylesheet" href="{% static 'marketing/css/style.css' %}">
+    <link rel="stylesheet" href="{% static 'marketing/css/marketing_style.css' %}">
     <link rel="stylesheet" href="{% static 'cms/css/cms-dashboard.css' %}">
     
     {% block extra_css %}{% endblock %}
@@ -18,7 +18,7 @@
     <nav class="navbar navbar-expand-lg sticky-top cms-navbar-main">
         <div class="container-fluid px-4">
             <a class="navbar-brand d-flex align-items-center" href="{% url 'cms:dashboard' %}">
-                <img src="/media/logos/pp-logo.png" alt="Pillar & Post" class="cms-logo">
+                <img src="{% static 'marketing/images/pp-logo.png' %}" alt="Pillar & Post" class="cms-logo">
                 <span class="brand-text">PILLAR & POST</span>
             </a>
             
