--- a/marketing/templates/marketing/template_select.html
+++ b/marketing/templates/marketing/template_select.html
@@ -11,7 +11,7 @@
         <div class="row justify-content-center mb-5">
             <div class="col-md-6">
                 <label class="form-label small muted-text">Preview with your company name</label>
-                <input type="text" class="form-control form-control-lg text-center" id="companyNameInput" placeholder="e.g., Acme Recruitment">
+                <input type="text" class="form-control form-control-lg text-center" id="companyNameInput" placeholder="e.g., Best Recruitment Co.">
             </div>
         </div>
         
