simplify html links in marketing site. Add 404 and 500 pages

--- a/marketing/templates/marketing/about.html
+++ b/marketing/templates/marketing/about.html
@@ -28,7 +28,7 @@
 
         <div class="text-center mt-5 pt-5 border-top">
             <h3 class="h5 mb-4">Ready to build your digital pillar?</h3>
-            <a href="{% url 'public_marketing:template_select' %}" class="btn btn-primary px-5">Get Started Free</a>
+            <a href="{% public_url 'template_select' %}" class="btn btn-primary px-5">Get Started Free</a>
         </div>
     </div>
 </section>
