--- a/templates/base.html
+++ b/templates/base.html
@@ -1,4 +1,5 @@
 {% load static %}
+{% load tenant_tags %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -17,8 +18,8 @@
             
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto align-items-center">
-                    <li class="nav-item"><a class="nav-link" href="/about/">About</a></li>
-                    <li class="nav-item"><a class="nav-link" href="/choose-template/">Templates</a></li>
+                    <li class="nav-item"><a class="nav-link" href="{% public_url 'about' %}">About</a></li>
+                    <li class="nav-item"><a class="nav-link" href="{% public_url 'template_select' %}">Templates</a></li>
                     <li class="nav-item ms-lg-3">
                         <a class="btn btn-primary btn-sm px-4" href="/find-portal/">Login</a>
                     </li>
