adjust settings file to stop 500 errors

--- a/templates/base.html
+++ b/templates/base.html
@@ -28,7 +28,7 @@
                     <li class="nav-item"><a class="nav-link" href="{% public_url 'about' %}">About</a></li>
                     <li class="nav-item"><a class="nav-link" href="{% public_url 'template_select' %}">Templates</a></li>
                     <li class="nav-item ms-lg-3">
-                        <a class="btn btn-primary btn-sm px-4" href="/find-portal/">Login</a>
+                        <a class="btn btn-primary btn-sm px-4" href="{% public_url 'portal_finder' %}">Login</a>
                     </li>
                 </ul>
             </div>
