move slug creation to service file, get all tests passing a t last!

--- a/marketing/templates/marketing/portal_finder.html
+++ b/marketing/templates/marketing/portal_finder.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
 {% load static %}
+{% load tenant_tags %}
 {% block title %}Find Your Portal | Pillar & Post{% endblock %}
 
 {% block content %}
