--- a/marketing/templates/marketing/preview_main.html
+++ b/marketing/templates/marketing/preview_main.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
 {% load static %}
+{% load tenant_tags %}
 
 {% block extra_css %}
     <link rel="stylesheet" href="{% static 'cms/css/tenant_themes.css' %}">
