--- a/marketing/templates/marketing/about.html
+++ b/marketing/templates/marketing/about.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
 {% load static %}
+{% load tenant_tags %}
 {% block title %}About Pillar & Post{% endblock %}
 
 {% block content %}
