--- a/templates/base.html
+++ b/templates/base.html
@@ -9,7 +9,7 @@
     
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     
-    <link rel="stylesheet" href="{% static 'marketing/css/base.css' %}">
+    <link rel="stylesheet" href="{% static 'marketing/css/marketing_style.css' %}">
 </head>
 <body class="bg-light">
     <nav class="navbar navbar-expand-lg sticky-top border-bottom bg-white">
