--- a/templates/base.html
+++ b/templates/base.html
@@ -11,7 +11,11 @@
     
     <link rel="stylesheet" href="{% static 'marketing/css/marketing_style.css' %}">
 </head>
-<body class="bg-light">
+<body class="bg-light"><body class="bg-light">
+    <div class="bg-dark text-white text-center py-2 small fw-bold">
+        <span class="badge bg-warning text-dark me-2">BETA</span> 
+        Pillar & Post is currently in development. Please do not proceed to payment
+    </div>
     <nav class="navbar navbar-expand-lg sticky-top border-bottom bg-white">
         <div class="container">
             <a class="navbar-brand d-flex align-items-center" href="/">
