--- a/cms/templates/cms/base_cms.html
+++ b/cms/templates/cms/base_cms.html
@@ -10,6 +10,8 @@
     
     <link rel="stylesheet" href="{% static 'marketing/css/marketing_style.css' %}">
     <link rel="stylesheet" href="{% static 'cms/css/cms-dashboard.css' %}">
+    <link rel="icon" type="image/x-icon" href="{% static 'marketing/images/favicons/favicon.ico' %}">
+    <link rel="apple-touch-icon" href="{% static 'marketing/images/favicons/favicon.ico' %}">   
     
     {% block extra_css %}{% endblock %}
 </head>
