--- a/cms/templates/cms/base_tenant.html
+++ b/cms/templates/cms/base_tenant.html
@@ -9,6 +9,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     
     <link rel="stylesheet" href="{% static 'cms/css/tenant_themes.css' %}">
+    <link rel="icon" type="image/x-icon" href="{% static 'marketing/images/favicons/favicon.ico' %}">
+    <link rel="apple-touch-icon" href="{% static 'marketing/images/favicons/favicon.ico' %}">
     
     <style>
         :root {
