--- a/templates/base.html
+++ b/templates/base.html
@@ -10,6 +10,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     
     <link rel="stylesheet" href="{% static 'marketing/css/marketing_style.css' %}">
+    <link rel="icon" type="image/x-icon" href="{% static 'marketing/images/favicons/favicon.ico' %}">
+    <link rel="apple-touch-icon" href="{% static 'marketing/images/favicons/favicon.ico' %}">
 </head>
 <body class="bg-light"><body class="bg-light">
     <div class="bg-dark text-white text-center py-2 small fw-bold">
@@ -48,5 +50,6 @@
             <p class="text-muted mb-0">&copy; {% now "Y" %} Pillar & Post.</p>
         </div>
     </footer>
+    {% block extra_js %}{% endblock %}
 </body>
 </html>
