adjust so email auto appears on login page

--- a/marketing/templates/marketing/signup.html
+++ b/marketing/templates/marketing/signup.html
@@ -38,5 +38,5 @@
 {% endblock %}
 
 {% block extra_js %}
-<script src="{% static 'js/tenant_signup.js' %}"></script>
+<script src="{% static 'marketing/js/tenant_signup.js' %}"></script>
 {% endblock %}
